<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Boss Jobs</string>
    <string name="reset">Reset Job Search</string>
    <string name="tutorial">Tutorial</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="txt_image_slider">Image Slideshow</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="time_out">Time Out</string>
    <string name="error_occured">Error Occurred</string>
    <string name="search_title">App Search</string>
    <string name="job_label">Job Field: </string>
    <string name="company_name">Company: </string>
    <string name="position_description">Position Description: </string>
    <string name="salary">Salary: </string>
    <string name="education">Education Level: </string>
    <string name="jobType">Job Type: </string>
    <string name="prosCons">Pros and Cons: </string>
    <string name="links">Helpful Links: </string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Search Careers</string>
    <string name="favorites">Favorites</string>
    <string name="next_button">Next</string>
    <string name="job_query">Find Your Job</string>
    <string name="checkbox_1">Check Box 1</string>
    <string name="search_results">Search Results</string>

</resources>
