<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.aliv3nation.beingboss.MainActivity" >

    <item android:id="@+id/search"
          android:title="@string/search_title"
          android:icon="@drawable/ic_launcher"
          android:orderInCategory="10"
          app:showAsAction="collapseActionView|ifRoom"
          app:actionViewClass="android.support.v7.widget.SearchView"/>
    
    <item
        android:id="@+id/reset"
        android:orderInCategory="20"
        android:title="@string/reset"
        app:showAsAction="never"/>
    
     <item
        android:id="@+id/tutorial"
        android:orderInCategory="30"
        android:title="@string/tutorial"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu>
