<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent" 
    android:layout_height="match_parent" >
    
    <!-- ****************************************************************************-->
    <!-- UI Layout Definition for Search Results-->
    <!-- ****************************************************************************-->
	
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:gravity="top"
	    android:orientation="horizontal" 
	    android:background="@drawable/background">
	    
	    <TextView
			            android:id="@+id/title"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:minHeight="40dip"
			            android:padding="15dip"
			            android:text="@string/search_results"
			            android:background="#2ECCFA"
			            android:textSize="20sp" 
			            android:textColor="#000000"
			            android:layout_alignParentLeft="true"
			            android:layout_marginTop="?android:attr/actionBarSize"/>
		
	    <ScrollView
		     android:layout_width="match_parent"
		     android:layout_height="match_parent"
		     android:id="@+id/mainContent"
		     android:fillViewport="true"
		     android:layout_below="@+id/title"
		     android:layout_toRightOf="@+id/optionsMenu" >
		     
				<RelativeLayout
			        android:id="@+id/relativeLayout"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:gravity="top"
			        android:orientation="vertical"
			        android:paddingLeft="25dp"
			        android:paddingRight="0dp" >
		
			        <TextView
			            android:id="@+id/jobLabel"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_alignParentTop="true"
			            android:layout_alignParentLeft="true"
			            android:minHeight="40dip"
			            android:paddingEnd="20dip"
			            android:paddingStart="20dip"
			            android:text="@string/company_name"
			            android:textColor="#FFFFFF"
			            android:textSize="20sp"
			            android:layout_marginBottom="5dp"/>
		
			        <TextView
			            android:id="@+id/jobField"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_toRightOf="@+id/jobLabel"
			            android:layout_toEndOf="@+id/jobLabel"
			            android:minHeight="40dip"
			            android:paddingEnd="20dip"
			            android:paddingStart="20dip"
			            android:text="@string/search_results"
			            android:textColor="#2ECCFA"
			            android:textSize="20sp" 
			            android:layout_marginBottom="5dp"/>

			        <TextView
			            android:layout_height="wrap_content"
						android:layout_width="match_parent" 
						android:layout_below="@+id/jobField"
						android:id="@+id/it_positionDescription"
						android:minHeight="40dip"
			            android:paddingEnd="20dip"
			            android:paddingStart="20dip"
						android:text="@string/position_description"
			            android:textColor="#FFFFFF"
			            android:textSize="20sp"
			            android:background="#662ECCFA"
			            android:layout_marginBottom="5dp"/>
			        
			        <TextView
			            android:id="@+id/positionDescription"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_below="@+id/it_positionDescription"
			            android:minHeight="40dip"
			            android:paddingEnd="20dip"
			            android:paddingStart="20dip"
			            android:text="@string/search_results"
			            android:textColor="#FFFFFF"
			            android:textSize="20sp" 
			            android:visibility="gone"
			            android:layout_marginBottom="5dp"/>
			        
			        <TextView
			            android:id="@+id/Skill"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_below="@+id/positionDescription"
			            android:minHeight="40dip"
			            android:paddingEnd="20dip"
			            android:paddingStart="20dip"
			            android:text="@string/search_results"
			            android:textColor="#FFFFFF"
			            android:textSize="20sp" 
			            android:layout_marginBottom="5dp"/>
		
			        <TextView
			            android:id="@+id/expectedCost"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_below="@+id/Skill"
			            android:minHeight="40dip"
			            android:paddingEnd="20dip"
			            android:paddingStart="20dip"
			            android:text="@string/search_results"
			            android:textColor="#2ECCFA"
			            android:textSize="20sp" 
			            android:layout_marginBottom="5dp"/>
		
			        <TextView
			            android:id="@+id/MoneySource"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_below="@+id/expectedCost"
			            android:minHeight="40dip"
			            android:paddingEnd="20dip"
			            android:paddingStart="20dip"
			            android:text="@string/search_results"
			            android:textColor="#FFFFFF"
			            android:textSize="20sp" 
			            android:layout_marginBottom="5dp"/>
		
			        <TextView
			            android:id="@+id/JobLocation"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_below="@+id/MoneySource"
			            android:minHeight="40dip"
			            android:paddingEnd="20dip"
			            android:paddingStart="20dip"
			            android:text="@string/search_results"
			            android:textColor="#FFFFFF"
			            android:textSize="20sp" 
			            android:layout_marginBottom="5dp"/>
		
			        <TextView
			            android:id="@+id/it_jobType"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_below="@+id/JobLocation"
			            android:minHeight="40dip"
			            android:paddingEnd="20dip"
			            android:paddingStart="20dip"
			            android:text="@string/jobType"
			            android:textColor="#FFFFFF"
			            android:textSize="20sp" 
			            android:background="#662ECCFA"
			            android:layout_marginBottom="5dp"/>
			        
			        <TextView
			            android:id="@+id/jobType"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_below="@+id/it_jobType"
			            android:minHeight="40dip"
			            android:paddingEnd="20dip"
			            android:paddingStart="20dip"
			            android:text="@string/search_results"
			            android:textColor="#FFFFFF"
			            android:textSize="20sp" 
			            android:layout_marginBottom="5dp"
			            android:visibility="gone"/>
			        
			        <TextView
			            android:id="@+id/jobOutlook"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_below="@+id/jobType"
			            android:minHeight="40dip"
			            android:paddingEnd="20dip"
			            android:paddingStart="20dip"
			            android:text="@string/search_results"
			            android:textColor="#FFFFFF"
			            android:textSize="20sp" 
			            android:layout_marginBottom="5dp"/>
			        <TextView
			            android:id="@+id/mainLink"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_below="@+id/jobOutlook"
			            android:minHeight="40dip"
			            android:paddingEnd="20dip"
			            android:paddingStart="20dip"
			            android:text="@string/search_results"
			            android:textColor="#FFFFFF"
			            android:textSize="20sp" 
			            android:layout_marginBottom="5dp"
			            android:visibility="gone"
			            android:clickable="true"/>
		
			        <TextView
			            android:id="@+id/secondaryLink"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_below="@+id/mainLink"
			            android:minHeight="40dip"
			            android:paddingEnd="20dip"
			            android:paddingStart="20dip"
			            android:text="@string/search_results"
			            android:textColor="#FFFFFF"
			            android:textSize="20sp" 
			            android:layout_marginBottom="5dp"
			            android:visibility="gone"
			            android:clickable="true"/>
		
			        <TextView
			            android:id="@+id/usefulLink"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_below="@+id/secondaryLink"
			            android:minHeight="40dip"
			            android:paddingEnd="20dip"
			            android:paddingStart="20dip"
			            android:text="@string/search_results"
			            android:textColor="#FFFFFF"
			            android:textSize="20sp" 
			            android:layout_marginBottom="5dp"
			            android:visibility="gone"
			            android:clickable="true"/>
		
			        <Button
			            android:id="@+id/submit"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_below="@+id/usefulLink"
			            android:minHeight="40dip"
			            android:paddingEnd="20dip"
			            android:paddingStart="20dip"
			            android:text="@string/next_button"
			            android:textColor="#FFFFFF"
			            android:textSize="20sp" 
			            android:layout_marginBottom="5dp"/>
		
			    </RelativeLayout>
		</ScrollView>
</RelativeLayout>

<!-- Actual (List) Navigation Drawer -->
<ListView
        android:id="@+id/drawerList"
        android:layout_width="220dp"
        android:layout_height="match_parent"
        android:textColor="#2ECCFA"
        android:choiceMode="singleChoice"
        android:divider="@drawable/listviewdiv"
        android:dividerHeight="2dip"
        android:layout_gravity="end"
        android:paddingLeft="1dip"
        android:paddingRight="1dip"
        android:background="@drawable/cyan_19">

</ListView>

</android.support.v4.widget.DrawerLayout>