<?xml version="1.0" encoding="utf-8"?>
    
<android.support.v4.widget.DrawerLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent" 
    android:layout_height="match_parent" >
    
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/mainContent"
     android:fillViewport="true"
     android:background="@drawable/background" >
    <!-- ****************************************************************************-->
    <!-- UI Layout Definition for Search Results-->
    <!-- ****************************************************************************-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="horizontal" >
    
	<ImageButton
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textColor="#2ECCFA"
	    android:src="@drawable/search_preferences"
		android:id="@+id/favorites"
		android:contentDescription="@string/favorites"
		android:background="@android:color/transparent"/>
	  
	  <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical" >

	 <TextView
	    android:id="@+id/title"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:minHeight="40dip"
	    android:paddingEnd="20dip"
	    android:paddingStart="20dip"
	    android:text="@string/search_results"
	    android:textColor="#2ECCFA"
	    android:textSize="20sp" />
		
	<TextView
	    android:id="@+id/jobField"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:minHeight="40dip"
	    android:paddingEnd="20dip"
	    android:paddingStart="20dip"
	    android:text="@string/search_results"
	    android:textColor="#2ECCFA"
	    android:textSize="20sp" />
		
	<TextView
	    android:id="@+id/positionDescription"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:minHeight="40dip"
	    android:paddingEnd="20dip"
	    android:paddingStart="20dip"
	    android:text="@string/search_results"
	    android:textColor="#2ECCFA"
	    android:textSize="20sp" />
	
	<TextView
	    android:id="@+id/entrySalary"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:minHeight="40dip"
	    android:paddingEnd="20dip"
	    android:paddingStart="20dip"
	    android:text="@string/search_results"
	    android:textColor="#2ECCFA"
	    android:textSize="20sp" />
	
	<TextView
	    android:id="@+id/midCareerSalary"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:minHeight="40dip"
	    android:paddingEnd="20dip"
	    android:paddingStart="20dip"
	    android:text="@string/search_results"
	    android:textColor="#2ECCFA"
	    android:textSize="20sp" />
	
	<TextView
	    android:id="@+id/seniorSalary"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:minHeight="40dip"
	    android:paddingEnd="20dip"
	    android:paddingStart="20dip"
	    android:text="@string/search_results"
	    android:textColor="#2ECCFA"
	    android:textSize="20sp" />
	
	<TextView
	    android:id="@+id/StressLevel"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:minHeight="40dip"
	    android:paddingEnd="20dip"
	    android:paddingStart="20dip"
	    android:text="@string/search_results"
	    android:textColor="#2ECCFA"
	    android:textSize="20sp" />
	
	<TextView
	    android:id="@+id/investedTime"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:minHeight="40dip"
	    android:paddingEnd="20dip"
	    android:paddingStart="20dip"
	    android:text="@string/search_results"
	    android:textColor="#2ECCFA"
	    android:textSize="20sp" />
	
	<TextView
	    android:id="@+id/Education"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:minHeight="40dip"
	    android:paddingEnd="20dip"
	    android:paddingStart="20dip"
	    android:text="@string/search_results"
	    android:textColor="#2ECCFA"
	    android:textSize="20sp" />
	
	<TextView
	    android:id="@+id/educationLevel"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:minHeight="40dip"
	    android:paddingEnd="20dip"
	    android:paddingStart="20dip"
	    android:text="@string/search_results"
	    android:textColor="#2ECCFA"
	    android:textSize="20sp" />
	
	<TextView
	    android:id="@+id/Skill"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:minHeight="40dip"
	    android:paddingEnd="20dip"
	    android:paddingStart="20dip"
	    android:text="@string/search_results"
	    android:textColor="#2ECCFA"
	    android:textSize="20sp" />
	
	<TextView
	    android:id="@+id/expectedCost"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:minHeight="40dip"
	    android:paddingEnd="20dip"
	    android:paddingStart="20dip"
	    android:text="@string/search_results"
	    android:textColor="#2ECCFA"
	    android:textSize="20sp" />
	
	<TextView
	    android:id="@+id/MoneySource"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:minHeight="40dip"
	    android:paddingEnd="20dip"
	    android:paddingStart="20dip"
	    android:text="@string/search_results"
	    android:textColor="#2ECCFA"
	    android:textSize="20sp" />
	
	<TextView
	    android:id="@+id/JobLocation"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:minHeight="40dip"
	    android:paddingEnd="20dip"
	    android:paddingStart="20dip"
	    android:text="@string/search_results"
	    android:textColor="#2ECCFA"
	    android:textSize="20sp" />
	
	<TextView
	    android:id="@+id/Hours"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:minHeight="40dip"
	    android:paddingEnd="20dip"
	    android:paddingStart="20dip"
	    android:text="@string/search_results"
	    android:textColor="#2ECCFA"
	    android:textSize="20sp" />
	
	<TextView
	    android:id="@+id/jobType"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:minHeight="40dip"
	    android:paddingEnd="20dip"
	    android:paddingStart="20dip"
	    android:text="@string/search_results"
	    android:textColor="#2ECCFA"
	    android:textSize="20sp" />
	
	<TextView
	    android:id="@+id/prosCons"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:minHeight="40dip"
	    android:paddingEnd="20dip"
	    android:paddingStart="20dip"
	    android:text="@string/search_results"
	    android:textColor="#2ECCFA"
	    android:textSize="20sp" />
	
	<TextView
	    android:id="@+id/jobOutlook"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:minHeight="40dip"
	    android:paddingEnd="20dip"
	    android:paddingStart="20dip"
	    android:text="@string/search_results"
	    android:textColor="#2ECCFA"
	    android:textSize="20sp" />
	
	<TextView
	    android:id="@+id/mainLink"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:minHeight="40dip"
	    android:paddingEnd="20dip"
	    android:paddingStart="20dip"
	    android:text="@string/search_results"
	    android:textColor="#2ECCFA"
	    android:textSize="20sp" />
	
	<TextView
	    android:id="@+id/secondaryLink"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:minHeight="40dip"
	    android:paddingEnd="20dip"
	    android:paddingStart="20dip"
	    android:text="@string/search_results"
	    android:textColor="#2ECCFA"
	    android:textSize="20sp" />
	
	<TextView
	    android:id="@+id/usefulLink"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:minHeight="40dip"
	    android:paddingEnd="20dip"
	    android:paddingStart="20dip"
	    android:text="@string/search_results"
	    android:textColor="#2ECCFA"
	    android:textSize="20sp" />
	
	<Button
	    android:id="@+id/submit"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:minHeight="40dip"
	    android:paddingEnd="20dip"
	    android:paddingStart="20dip"
	    android:text="@string/search_title"
	    android:textColor="#2ECCFA"
	    android:textSize="20sp" />
	
	  </LinearLayout>
    </LinearLayout>
</ScrollView>

<!-- Actual (List) Navigation Drawer -->
<ListView
        android:id="@+id/drawerList"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:textColor="#2ECCFA"
        android:choiceMode="singleChoice"
        android:divider="@drawable/listviewdiv"
        android:dividerHeight="2dip"
        android:layout_gravity="end"
        android:paddingLeft="1dip"
        android:paddingRight="1dip"
        android:background="@drawable/cyan_19"
        android:textStyle="bold">

</ListView>

</android.support.v4.widget.DrawerLayout>